--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "create": "NODE_ENV=develop nodemon --inspect --exec babel-node test/create.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.23.9",
+    "prompt-sync": "^4.2.0",
     "sha256": "^0.2.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/node": "^7.23.9",
+    "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "babel-plugin-transform-remove-console": "^6.9.4"
   }
 }
