--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.23.9",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "prompt-sync": "^4.2.0",
     "sha256": "^0.2.0",
